--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "start": "npm run build && probot run ./dist/index.js"
   },
   "dependencies": {
+    "@types/bunyan": "^1.8.6",
+    "@types/node-fetch": "^2.5.4",
+    "module-alias": "^2.2.2",
     "node-fetch": "^2.6.0",
     "probot": "^9.5.3",
-    "renovate": "^19.133.11"
+    "renovate": "^19.133.11",
+    "ts-node": "^8.6.2",
+    "typescript": "^3.7.5"
   },
   "devDependencies": {},
   "engines": {
